WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302452
REGRESSION(
302916@main
): [GTK] UIProcess stuck during SQLite initialization
https://bugs.webkit.org/show_bug.cgi?id=302452
Summary
REGRESSION(302916@main): [GTK] UIProcess stuck during SQLite initialization
Adrian Perez
Reported
2025-11-12 23:56:00 PST
Every system that can reasonably run the WPE and GTK ports has a MT-safe confstr() implementation--which does *not* call fiddle with environment variables. That is the case for at least Linux with different libc implementations (glibc, musl, uClibc), NetBSD, FreeBSD, and OpenBSD. The Android C library (Bionic) does not even provide a confstr() implementation. We can gate the dance of bouncing the sqlite3_initialize() call onto the main thread behind an OS(DARWIN) guard.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2025-11-13 00:08:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53864
EWS
Comment 2
2025-11-13 01:44:49 PST
Committed
302977@main
(f839b59e79d4): <
https://commits.webkit.org/302977@main
> Reviewed commits have been landed. Closing PR #53864 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-11-13 01:45:13 PST
<
rdar://problem/164622486
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug